rollouts/cal.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: calculator-ro
  namespace: calculator
spec:
  template:
    metadata:
      labels:
        app: calculator-app
    spec:
      containers:
      - name: calculator-app
        image: 024848485298.dkr.ecr.us-west-2.amazonaws.com/argo-updated-image
        ports:
          - containerPort: 5000
          
  selector:
    matchLabels:
      app: calculator-app
  replicas: 5
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {duration: 10}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
