rollouts/ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-svc
  namespace: calculator
spec:
  type: LoadBalancer
  selector:
    app: calculator-app
  ports:
    - port: 5000
      targetPort: 5000
